Added 'Humidity' text beside the humidity value to make it easier to determine what the value is for. Also changed getFirst in WeatherService.java to get(0) since it was breaking in some devices